# rmcs_dart_guide

./: CMakeLists.txt  README.md  launch_parameters.md  package.xml  plugins.xml
doc/: fire_control_process.md  launch_parameters.md
src/: dartlauncher_guidance.cpp  launch_data_process.cpp  launch_detect.cpp
src/camera/: dart_camera_controller.cpp  identifier.hpp  imgae_publisher.cpp  tracker.hpp
src/launch_data/: dart_signal_parameters.hpp  launch_data_correction.hpp  launch_data_process.cpp
src/launch_data/game_data/: 5.30_blue_QDU.md
src/lidar/: distance_measurement_demo.cpp  lidar_controller.cpp  lidar_data_process.cpp  point_cloud_process.hpp  pointcloud_message_publisher.cpp
src/point_cloud_files/: base_detecter.pcd  milkdragon_test_pointcloud.pcd  milkdragon_test_target.pcd  record_original_pointcloud.pcd  scence_pointcloud.pcd  test_target_cloud.pcd
src/pointcloud_data/: lidar_data_save_node.cpp  save_pointcloud_files.cpp  scence_pointcloud.pcd
